--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -4,9 +4,25 @@ nav {
   justify-content: space-between;
   align-items: center;
   height: 64px;
-
-  .logo {
-    height: 25px;
-  }
 }
 
+nav .logo {
+  height: 25px;
+  margin-left: 1rem;
+}
+
+nav button {
+  border-radius: 24px;
+  border: none;
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
+}
+
+.login-btn {
+  background-color: lightgray;
+}
+
+.register-btn {
+  background-color: orangered;
+  color: white;
+}
