styling one spot view

--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -1,4 +1,11 @@
 .one-spot{
   width: 75%;
-  background-color: redl;;
+  height: 100vh;
+  background-color: #f4f4f4;
+  display: flex;
+  margin: auto;
+  border-radius: 24px 24px 0 0 ;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+  
 }
