edit background color

--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -6,6 +6,7 @@ nav {
   height: 64px;
   width: 100;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: #ffffff;
 }
 
 nav .nav__logo {
