--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -6,7 +6,9 @@
   margin: auto;
   margin-top: 2em;
   border-radius: 24px 24px 0 0 ;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+  font-family: Roboto;
 
   // make container extend below the page 
   bottom: -20px;
