--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -7,12 +7,10 @@
   margin-top: 2em;
   border-radius: 24px 24px 0 0 ;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
-  font-family: Roboto;
+  font-family: Roboto, Helvetica, sans-serif;
 
   // make container extend below the page 
   bottom: -20px;
-
 }
 
 .one-spot__header {
@@ -20,4 +18,10 @@
   justify-content: space-between;
   width: 100%;
   margin: 1.5em;
+  gap: 1.5em;
+}
+
+.one-spot__map {
+  width: 100%;
+  height: 300px;
 }
