--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -1,4 +1,7 @@
+
+
 .one-spot{
+
   width: 75%;
   height: 100vh;
   background-color: #ffffff;
@@ -8,6 +11,7 @@
   border-radius: 24px 24px 0 0 ;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   font-family: Roboto, Helvetica, sans-serif;
+  font-size: 16px;
 
   // make container extend below the page 
   bottom: -20px;
