make every second label grey

--- a/frontend/src/styles/AboutSpot.scss
+++ b/frontend/src/styles/AboutSpot.scss
@@ -13,7 +13,11 @@
   font-size: 12px;
   background-color: #FCBC94;
   border-radius: 9999px;
-  padding: 0.5em
+  padding: 0.5em;
+}
+
+.about-spot__label--grey {
+  background-color: #DADADA;
 }
 
 about-spot__name {
