--- a/frontend/src/styles/AboutSpot.scss
+++ b/frontend/src/styles/AboutSpot.scss
@@ -1,7 +1,16 @@
-.about-spot{ 
+.about-spot { 
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 20px;
+  padding-top: 1.5em;
+}
+
+.about-spot__info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
 }
 .about-spot__labels {
   display: flex;
@@ -19,6 +28,8 @@
 .about-spot__label--grey {
   background-color: #DADADA;
 }
+
+
 
 about-spot__name {
   font-size: 34px;
