--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -3,11 +3,14 @@
 .one-spot{
 
   width: 75%;
-  height: 100vh;
+  max-width: 1020px;
+  height: 110vh;
   background-color: #ffffff;
   display: flex;
   margin: auto;
-  margin-top: 2em;
+ 
+  margin-top: 3em;
+
   border-radius: 24px 24px 0 0 ;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   font-family: Roboto, Helvetica, sans-serif;
@@ -15,17 +18,43 @@
 
   // make container extend below the page 
   bottom: -20px;
+  padding-bottom: 20px; 
 }
 
 .one-spot__header {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  height: 370px;
   margin: 1.5em;
   gap: 1.5em;
 }
 
+
 .one-spot__map {
   width: 100%;
-  height: 300px;
+  max-width: 500px;
+  min-width: 200px;
+  height: 350px;
+}
+
+.one-spot__create-visit {
+  text-decoration: none;
+  color: #FFFFFF;
+  background-color: #F86204;
+  border-radius: 9999px;
+  padding: 0.5em 2.5em;
+  
+  justify-self: flex-end;
+  align-self: flex-end;
+  font-size: 14px;
+
+}
+
+.one-spot__header > div {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: none;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
