feat: add styles to search component

--- a/frontend/src/styles/AllSpots.scss
+++ b/frontend/src/styles/AllSpots.scss
@@ -3,8 +3,8 @@
   flex-direction: row;
 }
 
-.allSpots__container-map {
-  display: flex;
+.allSpots__map-container {
+  width: 100%;
 }
 
 .allSpots__map {
