--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -1,4 +1,26 @@
 .allSpotsSearch__container {
   width: 100%;
   height: 4rem;
+  padding: 1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+
+  input {
+    height: 2rem;
+    width: 24rem;
+    padding: 0 1rem;
+    background-color: #e0e0e0;
+    border: none;
+    border-radius: 24px;
+  }
+
+  .allSpots-btn-grey {
+    height: 2rem;
+    padding: 0 1rem;
+    color: #535353;
+    background-color: #e0e0e0;
+    border: none;
+    border-radius: 24px;
+  }
 }
