--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -7,6 +7,7 @@
   height: 110vh;
   background-color: #ffffff;
   display: flex;
+  flex-direction: column;
   margin: auto;
   margin-top: 3em;
   border-radius: 24px 24px 0 0 ;
