refactor with conditional rendering, change color

--- a/frontend/src/styles/AboutSpot.scss
+++ b/frontend/src/styles/AboutSpot.scss
@@ -29,6 +29,6 @@ about-spot__name {
   font-size: 34px;
 }
 
-.about-spot__label--grey {
-  background-color: #DADADA;
+.about-spot__label--pink {
+  background-color: #F7B09D;
 }
