render all visits in visit cards

--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -56,3 +56,9 @@
   justify-content: space-between;
   margin-bottom: 20px;
 }
+
+.one-spot__visits {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2px;
+}
