--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -25,11 +25,6 @@
     color: #5d5d5d;
   }
 
-  h4 {
-    font-size: 13px;
-    font-weight: 400;
-    color: #757575;
-  }
 }
 
 .visitCard__container:hover {
@@ -39,6 +34,20 @@
     transform: scale(1.08);
   }
 
+}
+
+.visitCard__info {
+  display: flex;
+  gap: 0.5em;
+}
+
+.visitCard__details {
+  font-weight: 800;
+}
+.visitCard__date {
+  font-size: 13px;
+  font-weight: 400;
+  color: #757575;
 }
 
 
