--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -1,6 +1,10 @@
-.visitCard__container {
+* {
   color: #000000;
   text-decoration: none;
+}
+
+.visitCard__container {
+
   width: 100%;
   height: 500px;
   display: flex;
@@ -9,7 +13,6 @@
   padding: 1.5rem;
   padding-bottom: 0.75rem;
 }
-
 
 .visitCard__info {
   display: flex;
@@ -25,8 +28,6 @@
   font-weight: 400;
   color: #757575;
 }
-
-
 
 .visitCard__image {
   img {
