--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -4,15 +4,20 @@
 }
 
 .visitCard__container {
-
   width: 100%;
   height: 500px;
   display: flex;
   flex-direction: column;
   gap: 0.65rem;
-  padding: 1.5rem;
   padding-bottom: 0.75rem;
 }
+
+.visitCard__container:hover .visitCard__image img {
+  /* Apply styles when the parent container (.visitCard__container) is hovered */
+  transform: scale(1.08); /* Example: Increase image size on hover */
+  transition: transform 0.25s ease-in; /* Add a smooth transition effect */
+}
+
 
 .visitCard__info {
   display: flex;
@@ -30,10 +35,12 @@
 }
 
 .visitCard__image {
+  border-radius: 24px;
+  overflow: hidden;
   img {
     transition: ease-in 0.25s;
     width: 100%;
     height: 100%;
-    border-radius: 24px;
+   
   }
 }
