--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -12,6 +12,26 @@
   background-color: white;
   border-radius: 24px;
   padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.creatSpot__form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+    textarea {
+  resize: none;
+  }
+}
+
+.creatSpot__form--element {
+  border-radius: 24px;
+  background-color: #e9e9e9;
+  border: none;
+  padding: 0.8rem 1rem;
 }
 
 .createSpot__map {
