--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -1,29 +1,31 @@
+$container-height: 680px;
+
 .createSpot__container {
-  height: 650px;
+  height: $container-height;
   border-radius: 24px;
-  margin-top: 2.5rem;
+  margin-top: 2rem;
   display: flex;
   flex-direction: row;
 }
 
 .createSpot__sideBar {
-  width: 500px;
+  width: 600px;
   height: 650px;
   background-color: white;
   border-radius: 24px;
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
-.creatSpot__form {
+.createSpot__form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 
-    textarea {
-  resize: none;
+  textarea {
+    resize: none;
   }
 }
 
@@ -31,10 +33,26 @@
   border-radius: 24px;
   background-color: #e9e9e9;
   border: none;
-  padding: 0.8rem 1rem;
+  padding: 0.6rem 1rem;
+}
+
+.createSpot__btn--submit {
+  width: 8rem;
+  background-color: orangered;
+  color: #fff;
+  margin: 0 auto;
+  border-radius: 24px;
+  border: none;
+  padding: 0.5rem 0;
+
+
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(242, 65, 0);
+  }
 }
 
 .createSpot__map {
   width: 100%;
-  height: 650px;
+  height: $container-height;
 }
