--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -29,11 +29,22 @@ $container-height: 680px;
   }
 }
 
-.creatSpot__form--element {
+.createSpot__form--element {
   border-radius: 24px;
   background-color: #e9e9e9;
   border: none;
   padding: 0.6rem 1rem;
+  font-size: 14px;
+}
+
+.createSpot__form--location {
+  display: flex;
+  justify-content: space-between;
+}
+
+.createSpot__form--green {
+  background-color: rgb(159, 225, 159);
+  color: #333333;
 }
 
 .createSpot__btn--submit {
