--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: Roboto, Helvetica, sans-serif;
 }
 
 .welcome__section {
@@ -23,4 +24,18 @@ input {
   border-radius: 24px;
   border: none;
   padding: 0.5rem 1.5rem;
+}
+
+.spots__carousel{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  
+  div{
+    border: 1px solid grey;
+    height: 30rem;
+    width: 50rem;
+
+  }
+
 }
