--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,23 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: Roboto, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 .welcome__section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+ 
+}
+
+h4{
+  font-size: 50px;
+  padding-bottom: 24px;
+  font-weight: bolder;
+}
+
+p {
+  font-size: 20px;
+  padding-top: 24px;
+  font-weight: lighter;
 }
 
 .header__img {
   width: 100%;
   height: auto;
-  display: block;
 }
 
 input { 
   font-size: 1rem; 
+  width: 400px;
+  box-shadow: 0 4px 8px -2px rgba(0,0,0,.3);
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .search__bar {
@@ -26,16 +47,12 @@ input {
   padding: 0.5rem 1.5rem;
 }
 
-.spots__carousel{
+section .list__spots{
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  
-  div{
-    border: 1px solid grey;
-    height: 30rem;
-    width: 50rem;
-
-  }
-
+  flex-direction: column;
+  width: 80%;
+  align-self: center;
+  padding-top: 24px;
+  border: 1px solid black;
 }
+
