--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -47,11 +47,12 @@ input {
   padding: 0.5rem 1.5rem;
 }
 
-section .list__spots{
+.list__spots{
   display: flex;
   flex-direction: column;
-  width: 80%;
-  align-self: center;
+  width: 60%;
+  margin: auto;
+  justify-content: center;
   padding-top: 24px;
   border: 1px solid black;
 }
