Space out spot list carousels

--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -54,6 +54,10 @@ input {
   margin: auto;
   justify-content: center;
   padding-top: 24px;
-  border: 1px solid black;
+  margin-bottom: 64px;
 }
 
+h1{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
