--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -33,15 +33,12 @@ p {
   height: auto;
 }
 
-input { 
+.homepage-search__input { 
   font-size: 1rem; 
   width: 400px;
   box-shadow: 0 4px 8px -2px rgba(0,0,0,.3);
   padding-left: 24px;
   padding-right: 24px;
-}
-
-.search__bar {
   border-radius: 24px;
   border: none;
   padding: 0.5rem 1.5rem;
