--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
 .login__container{
   display: flex;
   flex-direction: column;
@@ -5,4 +7,34 @@
   align-items: center;
   padding: 24px;
   font-family: Roboto, sans serif;
+}
+
+  .login__welcome{
+    text-align: center;
+    margin-bottom: 24px;
+  }
+
+.login__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login__input{
+  display: inline-flex;
+  border-radius: 12px;
+  border: none;
+  width: 300px;
+  padding: 12px;
+  margin-bottom: 24px;
+}
+
+.login__btn{
+  border-radius: 24px;
+  border: none;
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
+  width: 300px;
+  background-color: orangered;
+  color: white;
 }
