--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -35,11 +35,12 @@ p {
 
 .homepage-search__input { 
   font-size: 1rem; 
-  width: 400px;
+  width: 500px;
+  height: 52px;
   box-shadow: 0 4px 8px -2px rgba(0,0,0,.3);
   padding-left: 24px;
   padding-right: 24px;
-  border-radius: 24px;
+  border-radius: 9999px;
   border: none;
   padding: 0.5rem 1.5rem;
 }
