--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -1,9 +1,13 @@
 $container-height: 680px;
 
 .createSpot__container {
+  width: 75%;
   height: $container-height;
   border-radius: 24px;
+  margin: 0 auto;
   margin-top: 2rem;
+  background-color: #fff;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
   flex-direction: row;
 }
