--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -2,6 +2,7 @@ $container-height: 680px;
 
 .createSpot__container {
   width: 75%;
+  max-width: 1024px;
   height: $container-height;
   border-radius: 24px;
   margin: 0 auto;
