--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -25,13 +25,19 @@ $container-height: 680px;
 
   h1 {
     padding: 0;
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 14px;
+    padding-top: 0.3rem;
   }
 }
 
 .createSpot__form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.9rem;
 
   textarea {
     resize: none;
