--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -22,10 +22,18 @@ nav button {
 }
 
 .nav__login-btn {
+  border-radius: 24px;
+  border: none;
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
   background-color: lightgray;
+  color: black;
+  text-decoration: none;
+  font-size: 13px;
 }
 
 .nav__register-btn {
   background-color: orangered;
   color: white;
+  font-size: 13px;
 }
