--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -3,7 +3,8 @@ $container-height: 680px;
 .createSpot__container {
   width: 75%;
   max-width: 1024px;
-  height: $container-height;
+  min-height: $container-height;
+  height: auto;
   border-radius: 24px;
   margin: 0 auto;
   margin-top: 2rem;
@@ -15,7 +16,7 @@ $container-height: 680px;
 
 .createSpot__sideBar {
   width: 600px;
-  height: 650px;
+  min-height: $container-height;
   background-color: white;
   border-radius: 24px;
   padding: 1.5rem;
@@ -84,5 +85,5 @@ $container-height: 680px;
 
 .createSpot__map {
   width: 100%;
-  height: $container-height;
+  min-height: $container-height;
 }
