--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -6,8 +6,7 @@ $container-height: 680px;
   min-height: $container-height;
   height: auto;
   border-radius: 24px;
-  margin: 0 auto;
-  margin-top: 2rem;
+  margin: 2rem auto;
   background-color: #fff;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
@@ -46,8 +45,8 @@ $container-height: 680px;
 }
 
 .createSpot__form--element {
-  border-radius: 24px;
-  background-color: #e9e9e9;
+  border-radius: 10px;
+  background-color: #f1f1f1;
   border: none;
   padding: 0.6rem 1rem;
   font-size: 14px;
@@ -86,4 +85,58 @@ $container-height: 680px;
 .createSpot__map {
   width: 100%;
   min-height: $container-height;
+}
+
+input[type="file"]::file-selector-button {
+  border-radius: 24px;
+  padding: 0 16px;
+  height: 40px;
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+  margin-right: 16px;
+  transition: background-color 200ms;
+}
+
+/* file upload button hover state */
+input[type="file"]::file-selector-button:hover {
+  background-color: #f3f4f6;
+}
+
+/* file upload button active state */
+input[type="file"]::file-selector-button:active {
+  background-color: #e5e7eb;
+}
+
+.drop-container {
+  position: relative;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 10px;
+  border: 2px dashed #555;
+  color: #444;
+  cursor: pointer;
+  transition: background .2s ease-in-out, border .2s ease-in-out;
+}
+
+.drop-container:hover {
+  background: #eee;
+  border-color: #111;
+}
+
+.drop-container:hover .drop-title {
+  color: #222;
+}
+
+.drop-title {
+  color: #444;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  transition: color .2s ease-in-out;
 }
