--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -1,142 +1,81 @@
-$container-height: 680px;
-
 .createSpot__container {
-  width: 75%;
-  max-width: 1024px;
-  min-height: $container-height;
-  height: auto;
-  border-radius: 24px;
   margin: 2rem auto;
   background-color: #fff;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  display: flex;
-  flex-direction: row;
-}
-
-.createSpot__sideBar {
-  width: 600px;
-  min-height: $container-height;
-  background-color: white;
+  width: 800px;
+  height: auto;
   border-radius: 24px;
-  padding: 1.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-
-  h1 {
-    padding: 0;
-    font-size: 24px;
-  }
-
-  p {
-    font-size: 14px;
-    padding-top: 0.3rem;
-  }
-}
-
-.createSpot__form {
-  display: flex;
-  flex-direction: column;
-  gap: 0.9rem;
-
-  textarea {
-    resize: none;
-  }
-}
-
-.createSpot__form--element {
-  border-radius: 10px;
-  background-color: #f1f1f1;
-  border: none;
-  padding: 0.6rem 1rem;
-  font-size: 14px;
-}
-
-.createSpot__form--location {
-  display: flex;
   justify-content: space-between;
 
-  span {
-    font-size: 12px;
+  h1 {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 0.75rem;
+  }
+
+  .createSpot__header {
+    margin-bottom: 1.5rem;
+
+    h2 {
+      font-size: 18px;
+      color: grey;
+
+      font-weight: 400;
+    }
+
+    p {
+      font-size: 16px;
+      margin: 0;
+      margin-top: 0.5rem;
+      padding: 0;
+    }
   }
 }
 
-.createSpot__form--green {
-  background-color: rgb(159, 225, 159);
-  color: #333333;
+.createSpot__container--details {
+  width: 100%;
+  padding: 1.5rem;
 }
 
-.createSpot__btn--submit {
-  width: 8rem;
+.chooseSpot__map-container {
+  width: 100%;
+  height: 520px;
+}
+
+.createSpot__container--nav {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 0.5rem;
+}
+
+.createSpot__line {
+  border: none;
+  border-top: 1px solid #afafaf;
+  width: 100%;
+}
+
+.navigationButton__btn {
+  width: 6rem;
+  height: 3rem;
   background-color: orangered;
   color: #fff;
-  margin: 0 auto;
-  border-radius: 24px;
   border: none;
-  padding: 0.5rem 0;
+  border-radius: 9999px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.navigationButton__btn-grey {
+  background-color: inherit;
+  color: #000;
+  transition: 0.3s;
 
   &:hover {
     cursor: pointer;
-    background-color: rgb(242, 65, 0);
+    background-color: #efefef;
   }
-}
-
-.createSpot__map {
-  width: 100%;
-  min-height: $container-height;
-}
-
-input[type="file"]::file-selector-button {
-  border-radius: 24px;
-  padding: 0 16px;
-  height: 40px;
-  cursor: pointer;
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, 0.16);
-  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
-  margin-right: 16px;
-  transition: background-color 200ms;
-}
-
-/* file upload button hover state */
-input[type="file"]::file-selector-button:hover {
-  background-color: #f3f4f6;
-}
-
-/* file upload button active state */
-input[type="file"]::file-selector-button:active {
-  background-color: #e5e7eb;
-}
-
-.drop-container {
-  position: relative;
-  display: flex;
-  gap: 10px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  border-radius: 10px;
-  border: 2px dashed #555;
-  color: #444;
-  cursor: pointer;
-  transition: background .2s ease-in-out, border .2s ease-in-out;
-}
-
-.drop-container:hover {
-  background: #eee;
-  border-color: #111;
-}
-
-.drop-container:hover .drop-title {
-  color: #222;
-}
-
-.drop-title {
-  color: #444;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  transition: color .2s ease-in-out;
 }
