feat: add hover style to forward button

--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -67,6 +67,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &:hover {
+    cursor: pointer;
+    background-color: #df3c00;
+  }
 }
 
 .navigationButton__btn-grey {
