--- a/frontend/src/styles/AddImage.scss
+++ b/frontend/src/styles/AddImage.scss
@@ -1,6 +1,34 @@
 .addImage__container {
   width: 100%;
   padding: 3rem;
+  display: flex;
+  justify-content: center;
+}
+
+.addImage__image {
+  position: relative;
+
+  img {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+.addImage__remove-image {
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: #efefef;
+  border-radius: 9999px;
+  border: none;
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  z-index: 100;
+
+  &:hover {
+    cursor: pointer;
+    background-color: #dedede;
+  }
 }
 
 .drop-container {
