--- a/frontend/src/styles/AboutSpot.scss
+++ b/frontend/src/styles/AboutSpot.scss
@@ -1,9 +1,13 @@
 .about-spot { 
+  // position: absolute;
+  // top: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 20px;
   padding-top: 1.5em;
+
+
 }
 
 .about-spot__save {
@@ -15,6 +19,9 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  h1 {
+   padding-top: 0px; 
+  }
 
 
 }
