toggle button icon when clicked

--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -58,6 +58,8 @@
   margin-bottom: 20px;
 
   .one-spot__save {
+    border: none;
+    background-color: #FFFFFF;
     display: inline-block;
     position: absolute;
     top: 0;
