--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -29,6 +29,11 @@
   margin-bottom: 24px;
 }
 
+#password{
+  -webkit-text-security: disc;
+  input-security: disc;
+}
+
 .login__btn{
   border-radius: 24px;
   border: none;
