--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -27,6 +27,7 @@
   width: 300px;
   padding: 12px;
   margin-bottom: 24px;
+  box-shadow: 0 4px 8px -2px rgba(0,0,0,.3);
 }
 
 #password {
@@ -42,6 +43,13 @@
   width: 300px;
   background-color: orangered;
   color: white;
+
+}
+
+.login__btn:hover {
+  background-color: rgb(182, 52, 5);
+  box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 span {
