--- a/frontend/src/styles/SideBar.scss
+++ b/frontend/src/styles/SideBar.scss
@@ -1,3 +1,5 @@
+@import '_theme.scss';
+
 .sideBar__container {
   width: 500px;
   height: calc(100vh - 4rem);
@@ -5,11 +7,11 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 0.75rem;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: $shadow-grey 0px 2px 8px 0px;
 }
 
 .sideBar__error {
   margin: 0 auto;
   padding-top: 4rem;
-  color: #9e9e9e;
+  color: $text-light-grey;
 }
