--- a/frontend/src/styles/AddImage.scss
+++ b/frontend/src/styles/AddImage.scss
@@ -1,3 +1,5 @@
+@import '_theme.scss';
+
 .addImage__container {
   width: 100%;
   padding: 3rem;
@@ -31,59 +33,85 @@
   }
 }
 
-.drop-container {
-  width: 100%;
-  height: 350px;
+.file-upload {
+  text-align: center;
+  border: 1px dashed #5d5d5d;
+  border-radius: 24px;
+  padding: 1.5rem;
   position: relative;
+  cursor: pointer;
+  width: 100%;
+  height: 404px;
   display: flex;
-  gap: 10px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px;
-  border-radius: 10px;
-  border: 2px dashed #555;
-  color: #444;
+  gap: 1rem;
+
+  &:hover {
+    background-color: $background-grey;
+  }
+}
+
+.file-upload p {
+  padding: 0;
+  font-size: 0.87rem;
+  color: $text-light-grey;
+}
+
+.file-upload input {
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
   cursor: pointer;
-  transition: background .2s ease-in-out, border .2s ease-in-out;
 }
+// .drop-container {
+//   width: 100%;
+//   height: 350px;
+//   position: relative;
+//   display: flex;
+//   gap: 10px;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   padding: 20px;
+//   border-radius: 10px;
+//   border: 2px dashed #555;
+//   color: #444;
+//   cursor: pointer;
+//   transition: background .2s ease-in-out, border .2s ease-in-out;
+// }
 
-.drop-container:hover {
-  background: #eee;
-  border-color: #111;
-}
+// .drop-container:hover {
+//   background: #eee;
+//   border-color: #111;
+// }
 
-.drop-container:hover .drop-title {
-  color: #222;
-}
+// input[type="file"]::file-selector-button {
+//   border-radius: 24px;
+//   padding: 0 16px;
+//   height: 40px;
+//   cursor: pointer;
+//   background-color: white;
+//   border: 1px solid rgba(0, 0, 0, 0.16);
+//   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+//   margin-right: 16px;
+//   transition: background-color 200ms;
+// }
 
-.drop-title {
-  color: #444;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  transition: color .2s ease-in-out;
-}
+// /* file upload button hover state */
+// input[type="file"]::file-selector-button:hover {
+//   background-color: #f3f4f6;
+// }
 
-input[type="file"]::file-selector-button {
-  border-radius: 24px;
-  padding: 0 16px;
-  height: 40px;
-  cursor: pointer;
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, 0.16);
-  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
-  margin-right: 16px;
-  transition: background-color 200ms;
-}
-
-/* file upload button hover state */
-input[type="file"]::file-selector-button:hover {
-  background-color: #f3f4f6;
-}
-
-/* file upload button active state */
-input[type="file"]::file-selector-button:active {
-  background-color: #e5e7eb;
-}
+// /* file upload button active state */
+// input[type="file"]::file-selector-button:active {
+//   background-color: #e5e7eb;
+// }
 
