--- a/frontend/src/styles/ConditionsCard.scss
+++ b/frontend/src/styles/ConditionsCard.scss
@@ -1,8 +1,26 @@
+@import './theme';
+
 .conditions-card {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 0.5rem;
+  gap: 0.5rem;
+  background-color: $background-grey;
+  border-radius: 24px;
+  height: 100%;
+
 
   img {
     height: 36px;
+  }
+}
+
+.conditions-card__temps {
+  display: flex;
+  gap: 2px;
+
+  .conditions-card__min-temp {
+    color: $text-light-grey;
   }
 }
