--- a/frontend/src/styles/ConditionsCard.scss
+++ b/frontend/src/styles/ConditionsCard.scss
@@ -1,18 +1,20 @@
 @import './theme';
 
 .conditions-card {
+  font-size: 14px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
+  padding: 0.5rem 1.5rem;
+  gap: 0.25rem;
   background-color: $background-grey;
   border-radius: 24px;
-  height: 100%;
+  height: 100px;
+  width: 100px;
 
 
   img {
-    height: 36px;
+    height: 40px;
   }
 }
 
