--- a/frontend/src/styles/AboutSpot.scss
+++ b/frontend/src/styles/AboutSpot.scss
@@ -1,11 +1,10 @@
 .about-spot { 
-  // position: absolute;
-  // top: 0;
+
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  padding-top: 1.5em;
+  gap:1.5rem;
+  padding-top: 1.5rem;
 
 
 }
@@ -21,6 +20,7 @@
   gap: 5px;
   h1 {
    padding-top: 0px; 
+   padding-bottom: 0px;
   }
 
 
