--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -1,4 +1,4 @@
-
+@import '_theme.scss';
 
 .one-spot{
   width: 75%;
@@ -11,7 +11,7 @@
   margin: auto;
   margin-top: 3em;
   border-radius: 24px 24px 0 0 ;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: $shadow-grey 0px 2px 8px 0px;
   font-family: Roboto, Helvetica, sans-serif;
   font-size: 16px;
   position: relative;
@@ -41,7 +41,7 @@
 .one-spot__create-visit {
   text-decoration: none;
   color: #FFFFFF;
-  background-color: #F86204;
+  background-color: $button-orange;
   border-radius: 9999px;
   padding: 0.5em 2.5em;
   align-self: flex-end;
@@ -49,7 +49,10 @@
   position: absolute;
   bottom: 0;
   right: 0;
+}
 
+.one-spot__create-visit:hover {
+  background-color: $button-orange-hover;
 }
 
 .one-spot__header > div {
