make visit grid 4 spots wide

--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -74,7 +74,7 @@
 
 .one-spot__visits {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 1.5em;
   margin: 1.5em;
 }
