--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -7,10 +7,11 @@ $button-orange: #F86204;
 $button-orange-hover: #ea4e15;
 $button-grey: #DADAD8;
 $button-grey-hover: #cacaca;
+$button-grey-disabled: #e5e5e5;
 
 
 // box-shadow
-$shadow-grey: rgba(99, 99, 99, 0.2);
+$shadow-grey: #63636333;
 
 // non-black text colors
 $text-light-grey: #757575;
