--- a/frontend/src/styles/AddImage.scss
+++ b/frontend/src/styles/AddImage.scss
@@ -35,7 +35,7 @@
 
 .file-upload {
   text-align: center;
-  border: 1px dashed #5d5d5d;
+  border: 1px dashed $text-grey;
   border-radius: 24px;
   padding: 1.5rem;
   position: relative;
@@ -71,47 +71,4 @@
   opacity: 0;
   cursor: pointer;
 }
-// .drop-container {
-//   width: 100%;
-//   height: 350px;
-//   position: relative;
-//   display: flex;
-//   gap: 10px;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   padding: 20px;
-//   border-radius: 10px;
-//   border: 2px dashed #555;
-//   color: #444;
-//   cursor: pointer;
-//   transition: background .2s ease-in-out, border .2s ease-in-out;
-// }
-
-// .drop-container:hover {
-//   background: #eee;
-//   border-color: #111;
-// }
-
-// input[type="file"]::file-selector-button {
-//   border-radius: 24px;
-//   padding: 0 16px;
-//   height: 40px;
-//   cursor: pointer;
-//   background-color: white;
-//   border: 1px solid rgba(0, 0, 0, 0.16);
-//   box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
-//   margin-right: 16px;
-//   transition: background-color 200ms;
-// }
-
-// /* file upload button hover state */
-// input[type="file"]::file-selector-button:hover {
-//   background-color: #f3f4f6;
-// }
-
-// /* file upload button active state */
-// input[type="file"]::file-selector-button:active {
-//   background-color: #e5e7eb;
-// }
 
