--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -1,11 +1,13 @@
+@import '_theme.scss';
+
 nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   height: 64px;
-  width: 100;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  width: 100%;
+  box-shadow: $shadow-grey;
   background-color: #ffffff;
 }
 
@@ -40,14 +42,24 @@ nav button {
   border: none;
   margin: 0.5rem;
   padding: 0.5rem 1rem;
-  background-color: lightgray;
+  background-color: $button-grey;
   color: black;
   text-decoration: none;
   font-size: 13px;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $button-grey-hover;
+  }
 }
 
 .nav__register-btn {
-  background-color: orangered;
+  background-color: $button-orange;
   color: white;
   margin: 1rem;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $button-orange-hover;
+  }
 }
