--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+@import '_theme.scss';
 
 .login__container {
   display: flex;
@@ -46,13 +47,13 @@
   padding: 0.5rem 1rem;
   margin-bottom: 0.5rem;
   width: 300px;
-  background-color: orangered;
+  background-color: $button-orange;
   color: white;
 
 }
 
 .login__btn:hover {
-  background-color: rgb(182, 52, 5);
+  background-color: $button-orange-hover;
   box-shadow: 0 4px 8px -2px rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
