fix: nav shadow bug

--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -7,7 +7,7 @@ nav {
   align-items: center;
   height: 64px;
   width: 100%;
-  box-shadow: $shadow-grey;
+  box-shadow: $shadow-grey 0px 2px 8px 0px;
   background-color: #ffffff;
 }
 
