add user info stylesheet

--- a/frontend/src/styles/Profile.scss
+++ b/frontend/src/styles/Profile.scss
@@ -15,4 +15,5 @@ $width: 1020px;
 .profile > * {
   background-color: #FFFFFF;
   box-shadow: $shadow-grey 0px 2px 8px 0px;
+  border-radius: 24px;
 }
