--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -8,15 +8,15 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  margin-top: 3em;
+  margin-top: 1rem;
   border-radius: 24px 24px 0 0 ;
   box-shadow: $shadow-grey 0px 2px 8px 0px;
   font-family: Roboto, Helvetica, sans-serif;
   font-size: 16px;
   position: relative;
   // make container extend below the page 
-  bottom: -20px;
-  padding-bottom: 20px; 
+  bottom: -1rem;
+  padding-bottom: 1rem; 
 }
 
 .one-spot__header {
