--- a/frontend/src/styles/Profile.scss
+++ b/frontend/src/styles/Profile.scss
@@ -1,7 +1,7 @@
 @import '_theme.scss';
 
 
-$width: 1020px;
+$width: 1220px;
 
 .profile {
   max-width: $width;
@@ -9,6 +9,7 @@ $width: 1020px;
   display: flex;
   gap: 3rem;
   margin: 0 auto;
+  margin-top: 2rem;
 
 }
 
