--- a/frontend/src/styles/UserSpots.scss
+++ b/frontend/src/styles/UserSpots.scss
@@ -1,6 +1,8 @@
 @import '_theme.scss';
 
 .user-spots__container {
+  padding: 1.5rem;
   height: 700px;
   flex: 16 auto;
+  position: relative;
 }
