--- a/frontend/src/styles/ViewToggle.scss
+++ b/frontend/src/styles/ViewToggle.scss
@@ -5,22 +5,39 @@
   top: 1.5rem;
   right: 1.5rem;
 
+  height: 36px;
+  width: 240px;
+
   background-color: $button-grey;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0.5rem 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  
+  // justify-content: space-between;
+  // align-items: center;
+
   box-shadow: inset $shadow-grey 0px 2px 8px 0px;
-  height: 30px;
-  width: 200px;
   border-radius: 24px;
+  padding: 0.5rem 1rem;
+
+  .view-toggle__option {
+    text-align: center;
+  }
+
+
 
   .view-toggle__option--selected {
-    position: relative;
     background-color: $button-orange;
     color: #FFFFFF;
-    height: 40px;
-    width: 70px;
     border-radius: 24px;
+    overflow: visible;
+    height: 40px;
+
+    box-shadow: $shadow-grey 0px 2px 8px 0px;
+
+    //center overflow + recenter text
+    margin: -10px 0;
+    padding: 0.5rem;
+    line-height: 22px;
+
   }
 }
