--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -12,7 +12,7 @@ $square-dimension: 650px;
 }
 
 .one-visit__details--container {
-  padding: 1.5rem;
+  padding: 2rem;
   width: 400px;
 }
 
@@ -24,5 +24,41 @@ $square-dimension: 650px;
     border-radius: 0 24px 24px 0 ;
     width: 100%;
     height: 100%;
+  }
+}
+
+.one-visit__header--container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  h2 {
+    font-weight: 400;
+  }
+
+  h3 {
+    font-weight: 300;
+  }
+}
+
+.one-visit__header--profile {
+  display: flex;
+  flex-direction: row;
+  gap: 0.75rem;
+  align-items: center;
+
+  .one-visit__header--image {
+    width: 50px;
+    height: 50px;
+  }
+
+  h1 {
+    font-size: 24px;
+    font-weight: 700;
+  }
+
+  p {
+    font-size: 14px;
+    color: $text-grey;
   }
 }
