--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -18,7 +18,7 @@ nav {
 }
 
 nav .nav__logo {
-  height: 30px;
+  height: 35px;
   margin-left: 1rem;
   margin-right: 1.5rem;
 
@@ -61,5 +61,21 @@ nav button {
   &:hover {
     cursor: pointer;
     background-color: $button-orange-hover;
+  }
+}
+
+.nav__logout-btn {
+  border-radius: 24px;
+  border: none;
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
+  background-color: $button-grey;
+  color: black;
+  text-decoration: none;
+  font-size: 13px;
+
+  &:hover {
+    cursor: pointer;
+    background-color: $button-grey-hover;
   }
 }
