--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -1,6 +1,31 @@
 @import '_theme.scss';
 
-.user-info__container {
-  height: 600px;
-  flex: 7 auto;
-}
+.user-info__container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  padding: 20px;
+  background-color: #FFFFFF;
+  box-shadow: $shadow-grey 0px 2px 8px 0px;
+  border-radius: 24px;
+ }
+
+
+ .card__image {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+ }
+ 
+ .card__name {
+  margin: 10px 0;
+  font-size: 24px;
+ }
+ 
+ .card__location {
+  margin: 5px 0;
+  font-size: 16px;
+  color: #888;
+ }
