add profile page option to VisitCard component

--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -27,6 +27,11 @@
   font-size: 12px;
   font-weight: 400;
   color: $text-light-grey;
+
+}
+
+.visitCard__date--profile {
+  margin-left:  1rem;
 }
 
 .visitCard__image {
