style visit grid

--- a/frontend/src/styles/UserSpots.scss
+++ b/frontend/src/styles/UserSpots.scss
@@ -1,7 +1,9 @@
 @import '_theme.scss';
 
 .user-spots__container {
-  padding: 1.5rem;
+  width: 786px;
+  padding: 2rem 1.5rem;
+
   height: 700px;
   flex: 16 auto;
   position: relative;
@@ -9,4 +11,15 @@
   h2 {
     font-size: 32px;
   }
+}
+
+.user-spots__header {
+  margin-bottom: 2rem;
+}
+
+.user-spots__visits {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1.5em;
+  margin: 1.5em;
 }
