add visit name to profile visit card

--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -31,7 +31,11 @@
 }
 
 .visitCard__date--profile {
-  margin-left:  1rem;
+  margin-left:  0.5em;
+}
+
+.visitCard__user--profile {
+  margin-left: 0.5em;
 }
 
 .visitCard__image {
