change visit card title class name

--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -34,8 +34,10 @@
   margin-left:  0.5em;
 }
 
-.visitCard__user--profile {
+.visitCard__name {
   margin-left: 0.5em;
+  font-size: 14px;
+  font-weight: 800px;
 }
 
 .visitCard__image {
