--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -7,6 +7,7 @@
   width: 300px;
   padding: 20px;
   background-color: #FFFFFF;
+  border-color: red;
   box-shadow: $shadow-grey 0px 2px 8px 0px;
   border-radius: 24px;
  }
