--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -4,6 +4,7 @@ $square-dimension: 650px;
 .one-visit__container {
   margin: 2rem auto;
   background-color: #fff;
+  box-shadow: $shadow-grey 0px 2px 8px 0px;
   width: fit-content;
   height: auto;
   border-radius: 24px;
@@ -39,6 +40,11 @@ $square-dimension: 650px;
   h3 {
     font-weight: 300;
   }
+
+  p {
+    font-size: 12px;
+    color: $text-grey;
+  }
 }
 
 .one-visit__header--profile {
@@ -52,14 +58,41 @@ $square-dimension: 650px;
     height: 50px;
   }
 
-  h1 {
-    font-size: 24px;
-    font-weight: 700;
+  h2 {
+    font-size: 20px;
+    font-weight: 400;
   }
 
   p {
     font-size: 14px;
     color: $text-grey;
+  }
+}
+
+.one-visit--line {
+  width: 100%;
+  border: none;
+  border-top: 1.5px solid $shadow-grey;
+}
+
+.one-visit__visit-details--container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+
+  h4 {
+    font-weight: 400;
+  }
+}
+
+.one-visit--visit-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  h1 {
+    font-size: 24px;
+    font-weight: 700;
   }
 }
 
