--- a/frontend/src/styles/UserInfoCard.scss
+++ b/frontend/src/styles/UserInfoCard.scss
@@ -1,15 +1,17 @@
 @import '_theme.scss';
+@import 'Profile.scss';
 
-.user-info__container{
+.profile .user-info__container{
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 300px;
+  height: 400px;
   padding: 20px;
   background-color: #FFFFFF;
-  border-color: red;
   box-shadow: $shadow-grey 0px 2px 8px 0px;
   border-radius: 24px;
+  
  }
 
 
@@ -18,6 +20,7 @@
   height: 80px;
   border-radius: 50%;
   object-fit: cover;
+  margin: 2rem 1.5rem;
  }
  
  .card__name {
