--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -110,3 +110,11 @@ $square-dimension: 650px;
   flex-direction: row;
   align-items: center;
 }
+
+.one-visit__labels {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
