--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -17,7 +17,7 @@ $square-dimension: 650px;
   width: 420px;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .one-visit__image--container {
@@ -120,10 +120,20 @@ $square-dimension: 650px;
   flex-direction: column;
   justify-content: space-between;
 
-  .one-visit__comments--posted {
-    overflow: scroll;
-    width: 100%;
+  .one-visit__comments--posted-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .one-visit__comments--posted {
+      overflow: scroll;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+    }
   }
+
 
   .one-visit__comments--add {
   }
