--- a/frontend/src/styles/UserSpots.scss
+++ b/frontend/src/styles/UserSpots.scss
@@ -8,7 +8,7 @@
   flex: 16 auto;
   position: relative;
 
-  h2 {
+  .user-spots__category h2 {
     font-size: 32px;
   }
 }
@@ -18,6 +18,14 @@
 }
 
 .user-spots__visits {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1.5em;
+
+}
+
+
+.user-spots__saves {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1.5em;
