feat: update input outline color

--- a/frontend/src/styles/OneVisit.scss
+++ b/frontend/src/styles/OneVisit.scss
@@ -148,7 +148,9 @@ $square-dimension: 650px;
     padding: 0.8rem 1rem;
     font-size: 14px;
     width: 100%;
+    outline-color: $text-light-grey;
   }
+
 }
 
 .comment-input {
