add profile pic to spot visits

--- a/frontend/src/styles/VisitCard.scss
+++ b/frontend/src/styles/VisitCard.scss
@@ -55,3 +55,11 @@
   width: 30px;
   margin: 0px 3px;
 }
+
+
+.visitCard__profile {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  margin-left: 0.5rem;
+ }
