--- a/frontend/src/styles/UserSpots.scss
+++ b/frontend/src/styles/UserSpots.scss
@@ -17,6 +17,12 @@
   margin-bottom: 2rem;
 }
 
+.user-spots__saves {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1.5em;
+}
+
 .user-spots__visits {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
