--- a/frontend/src/styles/CreateSpot.scss
+++ b/frontend/src/styles/CreateSpot.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: $shadow-grey;
+  box-shadow: $shadow-grey 0px 2px 8px 0px;
 
   h1 {
     margin: 0;
