feat: style logo

--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -21,7 +21,7 @@ nav .nav__logo {
   height: 35px;
   margin-left: 1rem;
   margin-right: 1.5rem;
-
+  margin-top: 0.2rem;
 }
 
 nav .nav__explore-link{
