--- a/frontend/src/styles/AllSpotsSearch.scss
+++ b/frontend/src/styles/AllSpotsSearch.scss
@@ -1,3 +1,5 @@
+@import '_theme.scss';
+
 .allSpotsSearch__container {
   width: 100%;
   height: 4rem;
@@ -10,17 +12,27 @@
     height: 2rem;
     width: 30rem;
     padding: 0 1rem;
-    background-color: #e0e0e0;
+    background-color: $button-grey-disabled;
     border: none;
     border-radius: 24px;
+    outline-color: $button-grey-hover;
   }
 
   .allSpots-btn-grey {
     height: 2rem;
     padding: 0 1rem;
-    color: #535353;
-    background-color: #e0e0e0;
+    background-color: $button-grey;
     border: none;
     border-radius: 24px;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    transition: $transition-3;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $button-grey-hover;
+      transition: $transition-3;
+    }
   }
 }
