--- a/frontend/src/styles/TopNavBar.scss
+++ b/frontend/src/styles/TopNavBar.scss
@@ -22,12 +22,26 @@ nav .nav__logo {
   margin-left: 1rem;
   margin-right: 1.5rem;
   margin-top: 0.2rem;
+  // transition: $transition-3;
+
+  // &:hover {
+  //   cursor: pointer;
+  //   transition: $transition-3;
+  //   transform: scale(1.05);
+  // }
 }
 
 nav .nav__explore-link{
   text-decoration: none;
   font-size: 13px;
   color: black;
+  // transition: $transition-3;
+
+  // &:hover {
+  //   cursor: pointer;
+  //   transition: $transition-3;
+  //   transform: scale(1.05);
+  // }
 }
 
 nav button {
@@ -46,10 +60,12 @@ nav button {
   color: black;
   text-decoration: none;
   font-size: 13px;
+  transition: $transition-3;
 
   &:hover {
     cursor: pointer;
     background-color: $button-grey-hover;
+    transition: $transition-3;
   }
 }
 
@@ -57,10 +73,12 @@ nav button {
   background-color: $button-orange;
   color: white;
   margin: 1rem;
+  transition: $transition-3;
 
   &:hover {
     cursor: pointer;
     background-color: $button-orange-hover;
+    transition: $transition-3;
   }
 }
 
@@ -81,10 +99,12 @@ nav button {
   color: black;
   text-decoration: none;
   font-size: 13px;
+  transition: $transition-3;
 
   &:hover {
     cursor: pointer;
     background-color: $button-grey-hover;
+    transition: $transition-3;
   }
 }
 
