feat: add transition variable, update greys

--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -5,8 +5,8 @@ $background-grey: #F5F5F5;    //use for: view body backgrounds, other non-white 
 // button colors
 $button-orange: #F86204;
 $button-orange-hover: #ea4e15;
-$button-grey: #DADAD8;
-$button-grey-hover: #cacaca;
+$button-grey: #151b0d14;
+$button-grey-hover: #151b0d29;
 $button-grey-disabled: #e5e5e5;
 
 
@@ -22,6 +22,6 @@ $light-orange: #FCBC94;   //currently used for: labels, logo
 $light-pink: #F7B09D;     //currently used for: labels, logo
 $sunny: #FCA712;          //currently used for: star ratings
 
-
+$transition-3: 0.3s;
 
 
